# web-audit

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/api/: __init__.py  crawl.py  projects.py  reports.py  security.py  seo.py
backend/app/crawler/: __init__.py  dirlist.py  engine.py  engine_fix.py  enumerator.py  fetcher.py  normalizer.py  parser.py  robots.py  sitemap.py
backend/app/models/: __init__.py  project.py  security.py  seo.py  url.py
backend/app/pentest/: payloads.py  scanner.py
backend/app/reports/: generator.py
backend/app/security/: scanner.py
backend/app/seo/: scanner.py
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/main/: index.ts  preload.ts  python.ts
desktop/src/renderer/: App.tsx  index.css
desktop/src/renderer/components/: CrawlProgress.tsx  DashboardPanel.tsx  NewProjectForm.tsx  SecurityPanel.tsx  SeoPanel.tsx  UrlTable.tsx
desktop/src/renderer/lib/: api.ts
desktop/src/renderer/pages/: Home.tsx  ProjectDetail.tsx  UrlTree.tsx
